# ShipBot

./: .flake8  .gitignore  Couples.sqlite  Dockerfile  Makefile  README.md  database.sqlite  install_python.sh  main.py  pyproject.toml  requirments.txt
ShipBot/: __init__.py  config.py  database.py  logger.py  texts.py
ShipBot/handlers/: Couple_func.py  __init__.py  admin_funcs.py  info_funcs.py  start_func.py  user_log_funcs.py
app/: __init__.py  bot.py  config.py  config.yaml  logger.py  texts.py
app/handlers/: __init__.py  info_funcs.py
app/src/: __init__.py  config.py  database.py  logger.py  texts.py
app/src/handlers/: __init__.py  admin_funcs.py  couple_func.py  info_funcs.py  start_func.py  user_log_funcs.py
