[tool.poetry]
name = "shipbot"
version = "1.2.0"
description = "Telegram bot to choose random couple from chat members"
authors = ["Dmitry Barsukoff <riZZZhik@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
humanize = "^4.8.0"
aiogram = "^2"
loguru = "^0.7.2"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
flake8-commas = "^2.1.0"
flake8-blind-except = "^0.2.1"
flake8-comprehensions = "^3.10.0"
flake8-pep3101 = "^2.0.0"
flake8-docstrings = "^1.6.0"
flake8-module-name = "^0.2.0"
flake8-string-format = "^0.3.0"
flake8-print = "^5.0.0"
flake8-builtins = "^2.0.0"
flake8-bugbear = "^22.9.23"
isort = "^5.12.0"
mypy = "^1.4.1"
xenon = "^0.9.0"
refurb = "^1.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

####################################################################################################
# Linters configuration
####################################################################################################

[tool.mypy]
python_version = 3.11
mypy_path = "./app"

[[tool.mypy.overrides]]
module = [
    "aiogram.*"
]
ignore_missing_imports = true

[tool.xenon]
xenon_exclude = []
xenon_max_absolute = "B"
xenon_max_modules = "B"
xenon_max_average = "A"

[tool.isort]
profile = "black"
py_version = 311
line_length = 100
wrap_length = 100
color_output = true

[tool.black]
line-length = 100
target-version = ['py311']
